# rai

./: .gitignore  Cargo.toml  README.md
crates/rai-cli/: Cargo.toml
crates/rai-cli/src/: config.rs  main.rs  output.rs
crates/rai-cli/src/commands/: account.rs  audit.rs  balance.rs  commodity.rs  file.rs  mod.rs  price.rs  profile.rs  query.rs  report.rs  transaction.rs  validate.rs
crates/rai-core/: Cargo.toml
crates/rai-core/src/: balance.rs  error.rs  inventory.rs  lib.rs  types.rs  validation.rs  weight.rs
crates/rai-db/: Cargo.toml
crates/rai-db/src/: error.rs  lib.rs  provider.rs  sqlite.rs
crates/rai-report/: Cargo.toml
crates/rai-report/src/: balance_sheet.rs  conversion.rs  data.rs  income_statement.rs  journal.rs  lib.rs  trend.rs  trial_balance.rs
docs/: cli.md  schema.md  sql-recipes.md
docs/archive/initial/plan/: 01-data-model.md  02-database-schema.md  06-cli.md
docs/archive/initial/research/: beancount-core.md
plan/: 00-overview.md  03-storage-provider.md  04-core-logic.md  05-reports.md  07-implementation-order.md
research/: README.md  beancount-query-and-interfaces.md
