[workspace]
members = ["crates/rai-core", "crates/rai-db", "crates/rai-report", "crates/rai-cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
rust_decimal = "1"
rust_decimal_macros = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
